--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>YouTuber Portfolio</title>
+  <title>ItzShTasrif Portfolio</title>
   <style>
     * {
       margin: 0;
@@ -106,7 +106,7 @@
 <body>
   <header>
     <div class="container">
-      <h1>Your Channel Name</h1>
+      <h1>ItzShTasrif</h1>
       <nav>
         <a href="#about">About</a>
         <a href="#videos">Videos</a>
@@ -118,15 +118,15 @@
   <section class="hero">
     <div class="container">
       <h2>Welcome to My Channel</h2>
-      <p>Creating awesome content about [Your Niche]</p>
-      <a href="https://www.youtube.com/yourchannel" class="btn" target="_blank">Subscribe</a>
+      <p>Creating awesome content about villages and beautiful places to share in my travel videos. </p>
+      <a href="https://www.youtube.com/@ItzShTasrif" class="btn" target="_blank">Subscribe</a>
     </div>
   </section>
 
   <section id="about" class="about">
     <div class="container">
       <h2>About Me</h2>
-      <p>Hi! I'm [Your Name], a content creator focusing on [topics]. I share [what you share] every week. Thanks for stopping by!</p>
+      <p>Hi! I'm ItzShTasrif, a content creator focusing on vloging. I share bd Village's videos every week. Thanks for stopping by!</p>
     </div>
   </section>
 
@@ -134,9 +134,9 @@
     <div class="container">
       <h2>Featured Videos</h2>
       <div class="video-grid">
-        <iframe src="https://www.youtube.com/embed/VIDEO_ID1" frameborder="0" allowfullscreen></iframe>
-        <iframe src="https://www.youtube.com/embed/VIDEO_ID2" frameborder="0" allowfullscreen></iframe>
-        <iframe src="https://www.youtube.com/embed/VIDEO_ID3" frameborder="0" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/ot7l-cYOv40" frameborder="0" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/kRvyJ-DdAhk" frameborder="0" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/gam7IZ_HMZI" frameborder="0" allowfullscreen></iframe>
       </div>
     </div>
   </section>
@@ -144,14 +144,14 @@
   <section id="contact" class="contact">
     <div class="container">
       <h2>Contact Me</h2>
-      <p>Email: yourname@example.com</p>
-      <p>Instagram: <a href="https://instagram.com/yourprofile" target="_blank">@yourprofile</a></p>
+      <p>Email: ItzShTasrif@gmail.com</p>
+      <p>Instagram: <a href="https://instagram.com/ItzShTasrif" target="_blank">@ItzShTasrif</a></p>
     </div>
   </section>
 
   <footer>
     <div class="container">
-      <p>&copy; 2025 Your Channel Name. All rights reserved.</p>
+      <p>&copy; 2025 ItzShTasrif. All rights reserved.</p>
     </div>
   </footer>
 </body>
