--- a/index.html
+++ b/index.html
@@ -90,6 +90,11 @@
       height: 200px;
     }
 
+    .webview {
+      margin-top: 40px;
+      height: 500px;
+    }
+
     footer {
       background: #222;
       color: #fff;
@@ -137,6 +142,11 @@
         <iframe src="https://www.youtube.com/embed/ot7l-cYOv40" frameborder="0" allowfullscreen></iframe>
         <iframe src="https://www.youtube.com/embed/kRvyJ-DdAhk" frameborder="0" allowfullscreen></iframe>
         <iframe src="https://www.youtube.com/embed/gam7IZ_HMZI" frameborder="0" allowfullscreen></iframe>
+      </div>
+      
+      <!-- WebView section to load YouTube Channel -->
+      <div class="webview">
+        <iframe src="https://www.youtube.com/@ItzShTasrif" frameborder="0" width="100%" height="100%" allowfullscreen></iframe>
       </div>
     </div>
   </section>
