--- a/index.html
+++ b/index.html
@@ -156,10 +156,10 @@
   <section id="contact" class="contact">
     <div align="center">
     <h3>━━━━ Connect with me ━━━━</h3>
-    <a href="https://fb.com/cybershbd" target="blank"><img align="center" src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/facebook.svg" alt="ShTasrif" height="30" width="40" /></a>
-    <a href="https://twitter.com/cybershbd" target="blank"><img align="center" src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/twitter.svg" alt="cybershbd" height="30" width="40" /></a>
-    <a href="https://fb.com/cybershbd" target="blank"><img align="center" src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/facebook.svg" alt="ShTasrif" height="30" width="40" /></a>
-    <a href="https://instagram.com/cybershbd" target="blank"><img align="center" src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/instagram.svg" alt="ShTasrif" height="30" width="40" /></a>
+    <a href="https://fb.com/ItzShTasrif" target="blank"><img align="center" src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/facebook.svg" alt="ShTasrif" height="30" width="40" /></a>
+    <a href="https://twitter.com/ItzShTasrif" target="blank"><img align="center" src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/twitter.svg" alt="cybershbd" height="30" width="40" /></a>
+    <a href="https://fb.com/tasrif.hossen.shuvo" target="blank"><img align="center" src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/facebook.svg" alt="ShTasrif" height="30" width="40" /></a>
+    <a href="https://instagram.com/ItzShTasrif" target="blank"><img align="center" src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/instagram.svg" alt="ShTasrif" height="30" width="40" /></a>
     </div>
   </section>
 
